# py-bas-canvas-inspector-automator

./: .gitattributes  Makefile  PROMO.md  README.md  cmd_worker.py  pyproject.toml
.github/: dependabot.yml
docs/data/: fp_request.txt
py_bas_canvas_inspector_automator/: __init__.py  helpers.py
py_bas_canvas_inspector_automator/automator/: __init__.py  automator.py  models.py
py_bas_canvas_inspector_automator/ocr/: __init__.py
tests/: __init__.py  conftest.py
tests/functional/: __init__.py  test_ocr.py
